style(frontend): when scrollbar popup prevent changes in width

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+   width: 100vw;
+   overflow-x: hidden;
+}
+
 body {
   font-family: "Poppins", serif;
 }
